Retirado todos os lorem ipsun

--- a/src/pages/horarios.html
+++ b/src/pages/horarios.html
@@ -65,7 +65,7 @@
 
           </div>
           <div class="table">
-            <h2 class="text-center">Tabela de horários do [SALA]</h2>
+            <h2 class="text-center">Tabela de horários do 3ºEMIA</h2>
             <table class="table table-striped">
               <thead>
                 <tr>
