--- a/src/pages/professores.html
+++ b/src/pages/professores.html
@@ -35,12 +35,13 @@
             <div class="box">
                 <h2 class="text-center">Cadastro de Professor(a)</h2>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
-                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br><br>
-                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
-                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis.
+                    Todos os professores devem ser cadastradas, para isso basta clicar no botão
+                    "Cadastrar Professor" e preencher todos os dados. <br><br>
+                    Exemplo: <br>
+                    Nome do Professor: Jorge Ribeiro dos Santos <br>
+                    Apelido da Classe: Jorge <br>
+                    Matéria que Leciona: Matématica <br>
+                    ...
                 </p>
                 <button class="btn-cadastrar" onclick="doit()">Cadastrar Professor</button>
     
@@ -48,14 +49,14 @@
             <div class="box linha-vertical">
                 <h2 class="text-center">Registrar Horários</h2>
                 <p class="p-buscar">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
-                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis. <br><br>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Placeat tempore iusto, impedit dolor veritatis enim corporis a nobis iste nam accusantium distinctio, 
-                    facilis cum. Praesentium nobis pariatur ratione. Explicabo, omnis. 
+                    Para determinar quais aulas os professores já cadastrados desejam
+                    pegar basta clicar no botão "Horários" e você sera redirecionado para
+                    uma página em que você deve escolher a sala que você deseja determinar
+                    os horários e quais professores vão lecionar para aquela turma, após isso
+                    os professores com maior pontuação serão chamados para registrar os horários que
+                    querem lecionar para aquela turma, levando em consideração os hórarios já ocupados.
                 </p>
-                <button class="btn-horarios" onclick="window.location.href ='./horarios.html'">Horarios</button>
+                <button class="btn-horarios" onclick="window.location.href ='./horarios.html'">Horários</button>
             </div>
     </div>
 </body>
