--- a/src/pages/salas.html
+++ b/src/pages/salas.html
@@ -14,6 +14,8 @@
     <!-- bibliotecas jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
 
     <!-- bibliotecas do js bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -198,8 +200,8 @@
                         <h5 id="confirmationMassange"></h5>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="declineBtn"></button>
-                        <button type="button" class="btn btn-primary" id="acceptBtn"></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="declineBtn" onclick="return false"></button>
+                        <button type="button" class="btn btn-primary" id="acceptBtn" onclick="return true"></button>
                     </div>
                 </div>
             </div>
